--- a/package.json
+++ b/package.json
@@ -21,11 +21,9 @@
     },
     "homepage": "https://github.com/turnerjw/ssr-pokemon#readme",
     "dependencies": {
-        "express": "^4.16.4",
         "isomorphic-unfetch": "^3.0.0",
         "next": "^7.0.2",
         "react": "^16.6.3",
-        "react-dom": "^16.6.3",
-        "styled-components": "^4.1.2"
+        "react-dom": "^16.6.3"
     }
 }
